<resources>
    <string name="app_name">tubi</string>
    <string name="enter">Ввод</string>
    <string name="menu_menu">Меню</string>
    <string name="menu_mainActivity">Главная</string>
    <string name="menu_catalog">Каталог</string>
    <string name="menu_shoping_box">Корзина</string>
    <string name="btn_admin_panel">панель администратора</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_category_products">Категории</string>
    <string name="title_products">Товары</string>
    <string name="download_messege">Идет загрузка</string>
    <string name="download_messege2">Ошибка передачи </string>
    <string name="collect_product_for">Собрать товар для ...</string>
    <string name="order_is_completed">Заказ выполнен</string>
    <string name="image_to_moderation">Фото на модерацию</string>
    <string name="in_stock">на складе</string>
    <string name="in_order">в заказе</string>
    <string name="rouble_short">руб</string>
    <string name="next">Дальше</string>
    <string name="total">Итого</string>
    <string name="to_find">Найти</string>
    <string name="to_share">Поделится</string>
    <string name="enter_city">Выберите город</string>
    <string name="hint_phone_number">9851118877</string>
    <string name="receive_data">Получить данные</string>
    <string name="give_away_product">Выдать товар</string>
    <string name="partner">Партнер</string>
    <string name="select_warehouse">Выберите склад</string>
    <string name="select_car">Выберите авто</string>
    <string name="show_all">Показать всех</string>
    <string name="select_one">Выбрать один</string>
    <string name="hand_over_product">Сдать товар</string>
    <string name="collect_product">Собрать товар</string>
    <string name="transfer_product">Передать товар</string>
    <string name="usual">Обычная</string>
    <string name="delivery_to_warehouse">Доставка склад-склад</string>
    <string name="data_recorder">Данные записаны</string>
    <string name="additional_information">Дополнительная информация</string>
    <string name="phone_for_contact">Телефон для связи</string>
    <string name="apply">Применить</string>
    <string name="stocks">Запасы</string>
    <string name="fridge">Холодильник</string>
    <string name="freezer">Морозильник</string>
    <string name="temperature_transportation">Температура перевозки</string>
    <string name="from_where">От куда</string>
    <string name="where">Куда</string>
    <string name="cargo_weght">вес груза</string>
    <string name="filtres">Фильтры</string>
    <string name="storage_conditions">Условия хранения</string>
    <string name="without_delivery">Без доставки</string>
    <string name="delivery_is_needed">Доставка нужна</string>
    <string name="logistics">Логистика</string>
    <string name="carrier_panel">Панель перевозчика</string>
    <string name="distribution_orders_provider_partners">Распределение заказов поставщик партнеры</string>
    <string name="number_product_units">Колличество единиц товара</string>
    <string name="quantity_position">Коллич. позиций</string>
    <string name="warehouse_partner">Склад партнер</string>
    <string name="warehouse">склад покупателя</string>
    <string name="buyer_is">покупатель</string>
    <string name="provider_is">поставщик</string>
    <string name="partner_is">партнер</string>
    <string name="enter_new_product">Добавить товар</string>
    <string name="add_warehouse">Добавить склад</string>
    <string name="create_warehouse">Создать склад</string>
    <string name="company_warehouse">Склады компании</string>
    <string name="specify_status_warehouse">Укажите статус склада</string>
    <string name="enter_category">Введите каталог</string>
    <string name="enter_category_product">Введите категорию продукта</string>
    <string name="counterparty_text">Контрагент</string>
    <string name="tax_id">ИНН</string>
    <string name="warehouse_address">Адрес склада</string>
    <string name="region">Регион</string>
    <string name="district">Район</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="agent">Агент</string>
    <string name="building">Корпус</string>
    <string name="signboard">Вывеска</string>
    <string name="new_code">Новый код</string>
    <string name="generated">Создан</string>
    <string name="activate_code">Активировать код</string>
    <string name="activated">Активирован</string>
    <string name="code">Код</string>
    <string name="code_status">Статус кода</string>
    <string name="create_an_order">Создать заказ</string>
    <string name="my_partners">Мои партнеры</string>
    <string name="invite_a_partner">Пригласить партнера</string>
    <string name="region_hint">Московская область</string>
    <string name="district_hint">Мытищенский район</string>
    <string name="city_hint">Мытищи</string>
    <string name="delivery">Доставка</string>
    <string name="pick_up_from_warehouse">Забрать со склада</string>
    <string name="enter_city_hint">Выберите город</string>
    <string name="your_region">ваш регион</string>
    <string name="signboard_hint"> Вывеска отсутствует</string>
    <string name="place_an_order">Оформить</string>
    <string name="become_an_agent">Стать Агентом #tubi</string>
    <string name="provide_warehouse">предоставить склад</string>
    <string name="candidate_for_partner_warehouse">Кандидаты в "партнер склада"</string>
    <string name="add_text_big">ДОБАВИТЬ</string>
    <string name="text001">Проверка товара перед загрузкой в базу</string>
    <string name="text002">Каталог</string>
    <string name="text003">Категория</string>
    <string name="text004">Брэнд</string>
    <string name="text005">Характеристика</string>
    <string name="text006">Тип упаковки</string>
    <string name="text007">Мера измерения</string>
    <string name="text008">Вес / объем</string>
    <string name="text009">Цена</string>
    <string name="text010">Кол-во поставки</string>
    <string name="text011">Кол-во в упаковке</string>
    <string name="text012">Поставщик</string>
    <string name="text013">Описание</string>
    <string name="text014">Проверить ошибки в поставке</string>
    <string name="text015">Добавить</string>
    <string name="text016">Заменить</string>
    <string name="text017">Заменить на</string>
    <string name="category_text">Категория</string>
    <string name="product_name_text">Наименование</string>
    <string name="brand_text">Брэнд</string>
    <string name="characteristic_text">Характеристика</string>
    <string name="unit_measure_text">Мера измерения</string>
    <string name="weiht_wolume_text">Вес/объем (гр, мл)</string>
    <string name="tipe_pacaging_text">Тип упаковки</string>
    <string name="price_text">Цена товара</string>
    <string name="product_quantity_text">Колич. поставки</string>
    <string name="quantity_package_text">Колич. в упак.(шт)</string>
    <string name="product_data_text">Данные товара</string>
    <string name="description_text">Описание товара</string>
    <string name="select_image">выбрать фотографию</string>
    <string name="enter_in_catalog">добавить в каталог</string>
    <string name="BACK">Назад</string>
    <string name="product_from_provider">Поставка товара</string>
    <string name="product_card">Карточка товара</string>
    <string name="edit_product">Редактор товара</string>
    <string name="summ">Сумма</string>
    <string name="rub_count"> руб/шт</string>
    <string name="products">Товары</string>
    <string name="OrderToGive">Заказать</string>
    <string name="transferMessage">Передать пожелания</string>
    <string name="position">Позиции</string>
    <string name="generalVeight">Общий вес</string>
    <string name="record">Записать</string>
    <string name="do_it_lather">Сделаю позже</string>
    <string name="profile_user">ВАШ ПРОФИЛЬ</string>
    <string name="edit">РЕД..</string>
    <string name="user_name">имя</string>
    <string name="phone">телефон</string>
    <string name="your_company">Ваша компания</string>
    <string name="data_your_company">Данные вашей компании</string>
    <string name="want_to_be_provider">Стать поставщиком</string>
    <string name="order_history">История заказов</string>
    <string name="admin_panel">Панель Администратора</string>
    <string name="logout">Выйти из приложения</string>
    <string name="buyer">Покупатель</string>
    <string name="provider">Поставщик</string>
    <string name="provider_short">П-щик</string>
    <string name="ip_big">ИП</string>
    <string name="ooo_big">ООО</string>
    <string name="Enter_details_your_company">Введите данные вашей компании</string>
    <string name="company_name">Название компании</string>
    <string name="hint_company_name">Лидер</string>
    <string name="taxpayer_id">Введите ИНН </string>
    <string name="hint_taxpayer_id">1234567890</string>
    <string name="send_contract">Отправить договор</string>
    <string name="comment">Комментарий</string>
    <string name="read_i_agree">Прочитано согласен(на)</string>
    <string name="my_company_big">МОЯ КОМПАНИЯ</string>
    <string name="buy_products">Поступление товара</string>
    <string name="sale_products">Реализация товара</string>
    <string name="orders_providers_big">ЗАКАЗЫ ПОСТАВЩИКАМ</string>
    <string name="buy_history_big">ИСТОРИЯ ЗАКУПОК</string>
    <string name="orders_buyers_big">ЗАКАЗЫ ПОКУПАТЕЛЕЙ</string>
    <string name="history_sale_big">ИСТОРИЯ ПРОДАЖ</string>
    <string name="put_product_on_catalog_big">ВЫЛОЖИТЬ ТОВАРЫ В КАТАЛОГ</string>
    <string name="max_length_text">Длинна текста до 300 символов</string>
    <string name="intercity_delivery_calendar">Междугородний календарь доставки </string>
    <string name="my_catalog_big">МОЙ КАТАЛОГ</string>
    <string name="description">описание</string>
    <string name="ordered">заказано</string>
    <string name="add">добавить</string>
    <string name="collected">собранно</string>
    <string name="price">цена</string>
    <string name="for_text">для</string>
    <string name="quantity_short">кол-во</string>
    <string name="quantity">колличество</string>
    <string name="ready">готов</string>
    <string name="rub_pieces">р/шт</string>
    <string name="volume">объем</string>
    <string name="weight">масса</string>
    <string name="open">Открыть</string>
    <string name="new_text">Новая</string>
    <string name="counterparty">поставщик</string>
    <string name="update">Обновить</string>
    <string name="slash"> / </string>
    <string name="quan_pack">шт/уп</string>
    <string name="pieces_short">шт</string>
    <string name="save">Сохранить</string>
    <string name="order_for_collect">Заказы для сборки</string>
    <string name="shipment_product">Открузка товара</string>
    <string name="product_name">Наименование</string>
    <string name="calendar">Календарь</string>
    <string name="order_for">Заказ на</string>
    <string name="clear">Очистить</string>
    <string name="number_small">номер</string>
    <string name="to_give_small">выдать</string>
    <string name="orders">Заказы</string>
    <string name="to_close">Закрыть</string>
    <string name="make_photo">Сделать фото</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="min_sell">Мин. продажа</string>
    <string name="multiple_of">Продажа кратно</string>
    <string name="contract_prepared">Договор подготовлен</string>
    <string name="contract_sent_for_signature">Договор отправлен на подпись</string>
    <string name="contract_is_signet">Договор подписан</string>
    <string name="provider_product_is_ready_for_delivery">Поставщики готовность товара к отгрузке</string>
    <string name="mes_2">На указанный Вами номер телефона</string>
    <string name="mes_1">будет сделан вызов, вам необходимо ввести в окно ввода ниже последние 4(четыре) цифры входящего номера</string>
</resources>