<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:title="@string/menu_mainActivity"
        android:id="@+id/main"
        />

    <item
        android:title="@string/menu_catalog"
        android:id="@+id/category"
        />

    <item
        android:title="@string/menu_shoping_box"
        android:id="@+id/shoping_box"
        app:showAsAction="always"
        android:icon="@drawable/shoping_box_60ps"
        />
    <!--android:visible="true"-->

    <item
        android:title="@string/menu_menu"
        android:id="@+id/menu"
        />


    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView" />
</menu>