<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ru.tubi.project.activity.AdminPanel.AddPartnerActivity">

    <TextView
        android:id="@+id/tvProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:textSize="20dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvGeneralInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbContractPrepared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="true"
            android:text="@string/contract_prepared" />

        <CheckBox
            android:id="@+id/cbContractSentForSignature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="true"
            android:text="@string/contract_sent_for_signature" />

        <CheckBox
            android:id="@+id/cbContractSignature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="true"
            android:text="@string/contract_is_signet" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView64"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/comment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/krugliye_ugli"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvComent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="22dp"
            android:textColor="@color/tubi_grey_400"
            android:gravity="center"
            android:text="@string/add_text_big" />
    </LinearLayout>

</LinearLayout>