<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="5dp"
    >

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:text="TextView" />

    <ImageView
        android:id="@+id/ivAddProduct"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/tubi_logo_no_image_300ps" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text002" />

    <TextView
        android:id="@+id/tvCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text003" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text005" />

    <TextView
        android:id="@+id/tvCharacteristic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text004" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/text008"
                android:textColor="@color/tubi_grey_600"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text007"
                android:textColor="@color/tubi_grey_600"
                android:layout_weight="1"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvWeightVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvUnitMeasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/text006"
                android:textColor="@color/tubi_grey_600"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text009"
                android:textColor="@color/tubi_grey_600"
                android:layout_weight="1"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvTipePacaging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text010"
                android:textColor="@color/tubi_grey_600"
                android:layout_weight="1"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text011"
                android:textColor="@color/tubi_grey_600"
                android:layout_weight="1"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvQuantityPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tubi_grey_200"
                android:text=""
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text012" />

    <TextView
        android:id="@+id/tvCounterparty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:background="@color/tubi_grey_200"
        android:text="" />
    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/tubi_grey_600"
        android:textSize="15dp"
        android:text="@string/text013" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tubi_grey_200"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18dp" />


</LinearLayout>