<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="top"
    tools:context=".activity.ConfirmPhoneActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:text="@string/mes_2" />
    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textSize="25dp"
        android:text="TextView" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:text="@string/mes_1" />

    <EditText
        android:id="@+id/etInputCode"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="30dp"
        android:hint="0000"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:inputType="number" />

    <Button
        android:id="@+id/btnGoConfirmPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>